[package]
name = "bali-score"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.18.1", features = ["serialize"]}
anyhow = "1.0.28"
structopt = "0.3.13"
serde = {version = "1.0.106", features = ["derive"]}
needletail = "0.3.2"
itertools = "0.9.0"
num-integer = "0.1.42"
serde_json = "1.0.51"
